css/style.css
html,
body {
  height: 100%;
  margin: 0;
}

h1, h2, h3, h4 {
  font-family: 'Londrina Solid', cursive;
}

h4  {
  font-size: 19px;
  margin-top: 20px;
}

section {
  min-height: 736px;
  min-height: calc(100vh - 50px);
  /*border-bottom: 1px solid #333;*/
  background: url('../img/bg3.png');
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
}
section:nth-child(1) {
  min-height: 100vh;
  background: url('../img/main-bg.jpg');
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
}
section:nth-child(2) {
  font-family: 'Londrina Solid', cursive;
}

section:nth-child(2) h2, h3 {
  line-height: 1.5;
}

img.formula {
  /*border: 20px solid lightgrey;*/
  margin-top: -50px;

}

section:nth-child(3) {
  background: url('../img/bg3_test.png');
  /*background: #cccc99;*/
}
section:nth-child(4) {
  min-height: calc(100vh - 100px);
}

section:nth-child(2) img {
  margin-top: 10%;
}


.container-fluid {
  padding: 0 40px;
}

body {
  background: #fbf8e5;
}


.work-preview img {
  border: 1px solid lightblue;
}

.navbar {
  margin-bottom: 0;
  border-radius: 0;
}

footer {
  background-color: rgba(0,0,0,0.8);
  color: #ddd;
  height: 50px;
  bottom: 0;
}

footer p {
  margin: 10px;
}

.img-thumbnail {
  border-radius: 0;
  border: 2px solid #999;
}

.navbar-inverse {
  width: 100%;
  z-index: 100;
}

.thumbnail {
  background: none;
  padding:0 10px;
  border: none;
  overflow:hidden;
}

.caption {
  display: none;
  position:absolute;
  top:66px;
  left: 10px;
  /*background:rgba(66, 139, 202, 0.75);*/
  background: rgba(13,13,2,0.7);
  width: calc(100% - 20px);
  height: 241px;
  padding:2%;*/
  display: none;
  text-align:center;
  color:#fff !important;
  z-index:2;
}

@media (max-width: 1199px) {
  .caption {
    height: 200px;
  }
}

@media (max-width: 991px) {
  .caption {
    height: 232px;
  }
}


.homepage-text {
  font-family: 'Londrina Solid', cursive;
  font-size: 50px;  
}

.portfolio-link {
  font-weight: bold;
  margin-top: 20px;
  display: inline-block;
  height: 50px;
  width: 150px;
  border: 2px solid #555;
  border-radius: 5px;
  font-size: 20px;
  color: #555;
  background: rgba(0,0,0,0.1);
}

.portfolio-link img:hover {
  color: #555;
  background: rgba(0,0,0,0.15);
  border: 3px solid #777;
}

@keyframes fadeIn {
    from {opacity: 0;}
    to   {opacity: 1}
}

.homepage-scroll {
  width: 50px;
  height: 60px;
  position: absolute;
  bottom: 0;
  left: calc(50vw - 25px);
  animation-name: fadeIn;
  animation-duration: 3s;
  animation-timing-function: ease-in;
}

.homepage-scroll-placeholder {
  width: 100%;
  height: 60px;
}

.fa-span {
  top: 5px;
  position: relative;
  text-align: center;
  display: inline-block;
  width: 30px;
}

.chicago-map {
  margin-top: 75px; 
  margin-left: 10%;
  width: 90%;
}

.mail-me-form {
  margin-left: 15px;
  margin-right: 15px;
}

.mail-me-form button {
  margin-top: 5px;
}

.project-wrapper {
  margin-bottom: 10px;
}

